changed issues with hover on mobile

--- a/src/styles/base/_masonry.scss
+++ b/src/styles/base/_masonry.scss
@@ -30,11 +30,9 @@
 			justify-content: center;
 			align-items: center;
 			img {
-				transition: opacity 0.5s ease;
 				width: 100%;
 			}
 			.photo-description {
-				transition: display 0.5s ease;
 				display: none;
 			}
 		}
@@ -113,6 +111,14 @@
 			.masonry-brick {
 				width: 24%;
 				margin-bottom: 1%;
+				img {
+					transition: opacity 0.5s ease;
+					width: 100%;
+				}
+				.photo-description {
+					transition: display 0.5s ease;
+					display: none;
+				}
 				&:hover {
 					.photo-description {
 						font: Helvetica, sans-serif;
